Use the PREreview font
Note that this has to use Google Fonts rather than self-hosting.

Refs #550, https://github.com/observablehq/framework/issues/1573

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,2 +1,12 @@
 @import url('observablehq:default.css');
 @import url('observablehq:theme-air.css');
+
+:root {
+  --sans-serif:
+    'IBM Plex Sans', ui-sans-serif, system-ui, -apple-system, 'Segoe UI', 'Roboto', 'Helvetica Neue', 'Noto Sans',
+    'Liberation Sans', 'Arial', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+}
+
+body {
+  font-family: var(--sans-serif);
+}
